--- a/PAGINA/popup.html
+++ b/PAGINA/popup.html
@@ -6,17 +6,24 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="../fuentes/style.css">
-    <link rel="stylesheet" href="../css/barra-busqueda.css">
+    <link rel="stylesheet" href="../css/popup.css">
     <link rel="stylesheet" href="../css/normalize.css">
 
 </head>
-
 <body>
-    <form method="post" class="barra-busqueda">
-        <div class="busqueda-field">
-            <input type="text" class="busqueda-field-texto" value="" required>
-            <span class="icon-search"></span>
+    
+    <div class="popup">
+        <div class="popup-texto">
+            <span class="icon-checkmark"></span>
+            <p>Acción realizada</p>
         </div>
-    </form>
+        <div class="popup-bar">
+            <div class="progress-bar"></div>
+        </div>
+    </div>
+
+
 </body>
 </html>
+
+
